--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 
 <body>
   <h1>Odin Recipes</h1>
+  <ul>
+    <li><a href="./recipes/CubanRopaVieja.html">Ropa Vieja</a></li>
+    <li><a href="./recipes/MacAndCheese.html">Mac and Cheese</a></li>
+    <li><a href="./recipes/CrockpotItalianChicken.html">Crockpot Italian Chicken</a></li>
+    <li><a href="./recipes/texaspulledpork.html">Texas Pulled Pork</a></li>
+    <li><a href="./recipes/beefmassamancurry.html">Beef Massaman Curry</a></li>
+
+  </ul>
 </body>
 
 </html>
