--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>Odin Recipes</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
   <h1>Odin Recipes</h1>
   <ul>
-    <li><a href="./recipes/CubanRopaVieja.html">Ropa Vieja</a></li>
-    <li><a href="./recipes/MacAndCheese.html">Mac and Cheese</a></li>
-    <li><a href="./recipes/CrockpotItalianChicken.html">Crockpot Italian Chicken</a></li>
-    <li><a href="./recipes/texaspulledpork.html">Texas Pulled Pork</a></li>
-    <li><a href="./recipes/beefmassamancurry.html">Beef Massaman Curry</a></li>
+    <li class="items"><a href="./recipes/CubanRopaVieja.html">Ropa Vieja</a></li>
+    <li class="items"><a href="./recipes/MacAndCheese.html">Mac and Cheese</a></li>
+    <li class="items"><a href="./recipes/CrockpotItalianChicken.html">Crockpot Italian Chicken</a></li>
+    <li class="items"><a href="./recipes/texaspulledpork.html">Texas Pulled Pork</a></li>
+    <li class="items"><a href="./recipes/beefmassamancurry.html">Beef Massaman Curry</a></li>
 
   </ul>
 </body>
